--- a/CryptoExchange/angular.json
+++ b/CryptoExchange/angular.json
@@ -104,13 +104,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "src/styles.css"
             ],
-            "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-
-            ]
+            "scripts": []
           }
         }
       }
